--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="card-body">
                   <h3>Italy</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta mollitia ipsum sint, eius delectus quo saepe autem! Autem vel laboriosam soluta a delectus odio dignissimos ullam itaque totam corporis. Beatae.</p>
-                  <a href="#">plus d'infos</a>
+                  <a href="#">En savoir plus</a>
                 </div>
               </div>
             </div>
@@ -74,7 +74,7 @@
                 <div class="card-body">
                   <h3>france</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta mollitia ipsum sint, eius delectus quo saepe autem! Autem vel laboriosam soluta a delectus odio dignissimos ullam itaque totam corporis. Beatae.</p>
-                  <a href="#">plus d'infos</a>
+                  <a href="#">En savoir plus</a>
                 </div>
               </div>
             </div>
@@ -86,7 +86,7 @@
                 <div class="card-body">
                   <h3>china</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta mollitia ipsum sint, eius delectus quo saepe autem! Autem vel laboriosam soluta a delectus odio dignissimos ullam itaque totam corporis. Beatae.</p>
-                  <a href="#">plus d'infos</a>
+                  <a href="#">En savoir plus</a>
                 </div>
               </div>
             </div>
@@ -103,16 +103,22 @@
     <section class="sessioncard" id="sessioncard">
       <div class="container"> 
         <div class="titre">
-          <h2><span>S</span>ouvenir</h2>
+          <h2><span>V</span>isite</h2>
         </div>
 
         <div class="row" style="margin-top: 30px;">
           <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="photos/Spain.png" alt="">
+              <img src="photos/jordan.png" alt="">
               <div class="card-body">
-                <h3>china</h3>
-                <a href="#">plus d'infos</a>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">0 $ </font></font><small class="text-muted"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">/ mois</font></font></small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">10 utilisateurs inclus</font></font></li>
+                    <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Accès au centre d'aide</font></font></li>
+                  </ul>
+                  <button type="button" class="btn btn-lg btn-block btn-outline-primary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">PLus de détails</font></font></button>
+                </div>
               </div>
             </div>
           </div>
@@ -120,39 +126,89 @@
 
           <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="photos/Spain.png" alt="">
+              <img src="photos/Mexico.png" alt="">
+              <div class="card-body">
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">0 $ </font></font><small class="text-muted"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">/ mois</font></font></small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">10 utilisateurs inclus</font></font></li>
+                    <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Accès au centre d'aide</font></font></li>
+                  </ul>
+                  <button type="button" class="btn btn-lg btn-block btn-outline-primary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">PLus de détails</font></font></button>
+                </div>
+              </div>
             </div>
           </div>
 
 
           <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="photos/Spain.png" alt="">
+              <img src="photos/Mexico.png" alt="">
+              <div class="card-body">
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">0 $ </font></font><small class="text-muted"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">/ mois</font></font></small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">10 utilisateurs inclus</font></font></li>
+                    <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Accès au centre d'aide</font></font></li>
+                  </ul>
+                  <button type="button" class="btn btn-lg btn-block btn-outline-primary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">PLus de détails</font></font></button>
+                </div>
+              </div>
             </div>
           </div>
 
         </div>
-        <div class="row" style="margin-top: 30px;">
-          <div class="col-md-4 py-3 py-md-0">
-            <div class="card">
-              <img src="photos/Spain.png" alt="">
-            </div>
-          </div>
+                <div class="row" style="margin-top: 30px;">
+                  <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                      <img src="photos/Turkey.png" alt="">
+                      <div class="card-body">
+                        <div class="card-body">
+                          <h1 class="card-title pricing-card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">0 $ </font></font><small class="text-muted"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">/ mois</font></font></small></h1>
+                          <ul class="list-unstyled mt-3 mb-4">
+                            <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">10 utilisateurs inclus</font></font></li>
+                            <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Accès au centre d'aide</font></font></li>
+                          </ul>
+                          <button type="button" class="btn btn-lg btn-block btn-outline-primary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">PLus de détails</font></font></button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
 
-          <div class="col-md-4 py-3 py-md-0">
-            <div class="card">
-              <img src="photos/Spain.png" alt="">
-            </div>
-          </div>
+                  <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                      <img src="photos/Turkey.png" alt="">
+                      <div class="card-body">
+                        <div class="card-body">
+                          <h1 class="card-title pricing-card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">0 $ </font></font><small class="text-muted"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">/ mois</font></font></small></h1>
+                          <ul class="list-unstyled mt-3 mb-4">
+                            <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">10 utilisateurs inclus</font></font></li>
+                            <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Accès au centre d'aide</font></font></li>
+                          </ul>
+                          <button type="button" class="btn btn-lg btn-block btn-outline-primary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">PLus de détails</font></font></button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
-          <div class="col-md-4 py-3 py-md-0">
-            <div class="card">
-              <img src="photos/Spain.png" alt="">
-            </div>
-          </div>
+                  <div class="col-md-4 py-3 py-md-0">
+                    <div class="card">
+                      <img src="photos/united state.png" alt="">
+                      <div class="card-body">
+                        <div class="card-body">
+                          <h1 class="card-title pricing-card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">0 $ </font></font><small class="text-muted"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">/ mois</font></font></small></h1>
+                          <ul class="list-unstyled mt-3 mb-4">
+                            <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">10 utilisateurs inclus</font></font></li>
+                            <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Accès au centre d'aide</font></font></li>
+                          </ul>
+                          <button type="button" class="btn btn-lg btn-block btn-outline-primary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">PLus de détails</font></font></button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
-        </div>
+                </div>
         
         </div>
     </section>
@@ -169,14 +225,19 @@
           <h2><span>C</span>ontact</h2>
         </div>
         <form>
-          <div class="form-row" style="margin-top: 30px;">
-            <div class="col">
-              <input type="text" class="form-control" placeholder="First name">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="Last name">
-            </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
         </div>
     </section>
